# cppstudies

./: CMakeLists.txt  adiciona_palavra.cpp  chuta.cpp  chuta.hpp  forca  forca.cpp  imprime_cabecalho.cpp  imprime_cabecalho.hpp  imprime_erros.cpp  imprime_erros.hpp  imprime_palavra.cpp  imprime_palavra.hpp  le_arquivo.cpp  le_arquivo.hpp  letra_existe.cpp  nao_acertou.cpp  nao_acertou.hpp  palavras.txt  salva_arquivo.cpp  salva_arquivo.hpp  sorteia_palavra.cpp
